--- a/homework/task14/我的简历.html
+++ b/homework/task14/我的简历.html
@@ -125,6 +125,8 @@
       text-align: center;
       margin-right: 30px;
       margin-top: 30px;
+      font-weight: bold;
+      font-size: 14px;
     }
 
     .skill p {
