--- a/homework/task14/我的简历.html
+++ b/homework/task14/我的简历.html
@@ -82,26 +82,32 @@
       margin-top: 30px;
     }
 
-    .work ul::before {
-      content:'';
-      width: 0;
-      height: 100px;
-      display: block;
-      border: 1px solid #888;
-      float: left;
-      margin-left: -42px;
-      margin-top: 9px;
+    .work ul {
+      position: relative;
     }
 
-    .edu ul::before {
+    .work ul::after {
       content:'';
-      width: 0;
-      height: 100px;
+      position: absolute;
+      height: 100%;
       display: block;
       border: 1px solid #888;
-      float: left;
-      margin-left: -42px;
-      margin-top: 9px;
+      top: 10px;
+      left: -2px;
+    }
+
+    .edu ul {
+      position: relative;
+    }
+
+    .edu ul::after {
+      content:'';
+      position: absolute;
+      height: 100%;
+      display: block;
+      border: 1px solid #888;
+      top: 10px;
+      left: -2px;
     }
 
     .point div {
