--- a/homework/task15/重写实战.html
+++ b/homework/task15/重写实战.html
@@ -315,6 +315,10 @@
     .footer .communi {
       text-align: center;
     }
+    
+    .footer .communi a:hover {
+      color: yellow;
+    }
 
     .footer .state {
       text-align: right;
