--- a/homework/task15/企业实战csgo.html
+++ b/homework/task15/企业实战csgo.html
@@ -7,7 +7,6 @@
     body {
       margin: 0;
     }
-
     .bgr {
       background-image: url(http://imgsrc.baidu.com/forum/w%3D580/sign=3aa1ef4aaf51f3dec3b2b96ca4eff0ec/fb56252dd42a2834932c118b5bb5c9ea14cebfb3.jpg);
       width: 100%;
@@ -15,12 +14,10 @@
       background-size: 100%;
       background-repeat: no-repeat;
     }
-
     a {
       text-decoration: none;
       color: white;
     }
-
     nav {
       width: 100%;
       height: 51px;
@@ -30,35 +27,29 @@
       position: fixed;
       z-index: 3;
     }
-
     .bgr .part a {
       font-size: 24px; 
     }
-
     .bgr .part {
       position: fixed;
       left: 0;
       top: 10px;
       margin-left: 100px;
     }
-
     .bgr .parts a {
       margin: 0 15px;
     }
-
     .bgr .parts {
       position: fixed;
       right: 0;
       top: 15px;
       margin-right: 100px;
     }
-
     .bgr .cnt {
       text-align: center;
       padding-top: 20%;
       color: white;
     }
-
     .bgr .cnt a {
       background: #FFFF37;
       border: 1px solid #FFFF37;
@@ -68,11 +59,9 @@
       margin-top: 30px;
       display: inline-block;
     }
-
     .bgr .cnt a:hover {
       background-color: yellow;
     }
-
     .part1,
     .part2,
     .part3,
@@ -80,14 +69,12 @@
     .part5 {
       text-align: center;
     }
-
     .part1 h1,
     .part2 h1,
     .part3 h1,
     .part4 h1 {
       margin-top: 100px;
     }
-
     .part1 h2,
     .part2 h2,
     .part3 h2,
@@ -95,78 +82,64 @@
       margin-bottom: 100px;
       color: #888;
     }
-
     .layout {
       max-width: 1140px;
       margin: 100px auto;
     }
-
     .part1 .cnt,
     .part4 .cnt {
       float: left;
       width: 350px;
       margin:0 15px;
     }
-
     .clearfixed::after {
       content:'';
       display: block;
       clear: both;
     }
-
     .part1 .cnt img,
     .part4 .cnt img {
       width: 150px;
       height: 150px;
       border-radius: 50%;
     }
-
     .part1 .cnt p,
     .part2 .cnt p,
     .part4 .cnt p {
       color: #888;
       margin-top: -15px;
     }
-
     .part2 img {
       width: 300px;
       height: 300px;
     }
-
     .part2 a {
       position: relative;
     }
-
     .part2 .pic1 {
       position: absolute;
       opacity: 0;
     }
-
     .part2 .pic1:hover {
       opacity: .7;
       transition-duration: 1s;
     }
-
     .part2 .cnt {
       float: left;
       width: 350px;
       margin: 0 15px;
     }
-
     .part2 .cnt h4 {
       margin-top: 0;
     }
-
     .part2 .cnt p {
       margin-bottom: 50px;
     }
-
     .part2,
     .part4 {
       background-color: #f0f0f0;
       padding: 50px 0;
     }
-
     .part3 .cnt img {
       width: 150px;
       height: 150px;
@@ -177,7 +150,6 @@
       position: relative;
       padding: 0 0 125px 0;
     }
-
     .part3 .cnt .intro {
       position: absolute;
       top: 0;
@@ -186,13 +158,11 @@
       margin-right: 100px;
       text-align: right;
     }
-
     .part3 .cnt:nth-child(even) .intro {
       left: 50%;
       margin-left: 100px;
       text-align: left;
     }
-
     .part3 .cnt::after {
       content: '';
       display: block;
@@ -204,7 +174,6 @@
       height: 100%;
       z-index: -1;
     }
-
     .part3 .last {
       width: 150px;
       height: 150px;
@@ -214,39 +183,32 @@
       color: white;
       margin: 0 auto;
     }
-
     .part3 .last h3 {
       width: 90px;
       height: 90px;
       margin: 0 auto;
       padding: 35px 0;
     }
-
     .part4 .intro {
       width: 800px;
       margin: 0 auto;
     }
-
     .ad img {
       width: 240px;
       height: 100px;
       opacity: .7;
       margin-right: 50px;
     }
-
     .ad a {
       color: red;
     }
-
     .ad a:last-child img {
       margin-right: 0;
     }
-
     .ad p {
       text-align: center;
       color: white;;
     }
-
     .ad p:hover {
       color: pink;
     }
@@ -257,44 +219,35 @@
       background-size: 100%;
       background-repeat: no-repeat;
     }
-
     .part5 h1 {
       padding-top: 100px;
       color: white;
     }
-
     .part5 h2 {
       color: #888;
     }
-
     .part5 .part {
       float: left;
       margin-right: 20px;
     }
-
     .part5 .arti {
       float: left;
     }
-
     .part5 .part input {
       width: 550px;
       height: 50px;
     }
-
     .part5 .arti #arti {
       width: 550px;
       height: 222px;
     }
-
     .part5 .element {
       margin-bottom: 30px;
       text-align: right;
     }
-
     .part5 .submit {
       margin-top: -50px;
     }
-
     .part5 .submit input {
       padding: 10px 30px;
       background: #FFFF37;
@@ -303,12 +256,10 @@
       font-size: 20px;
       color: white;
     }
-
     .part5 .submit input:hover {
       background: yellow;
       cursor:pointer;
     }
-
     .footer p,
     .footer .communi,
     .footer .state {
@@ -316,20 +267,16 @@
       width: 350px;
       margin: 0 15px 10px ;
     }
-
     .footer p,
     .footer .state {
       margin-top: 25px;
     }
-
     .footer .state a {
       color: yellow;
     }
-
     .footer .layout {
       margin: 0 auto;
     }
-
     @font-face {
       font-family: 'iconfont';  /* project id 289841 */
       src: url('//at.alicdn.com/t/font_lr76znx1ft1brzfr.eot');
@@ -338,7 +285,6 @@
       url('//at.alicdn.com/t/font_lr76znx1ft1brzfr.ttf') format('truetype'),
       url('//at.alicdn.com/t/font_lr76znx1ft1brzfr.svg#iconfont') format('svg');
     }
-
     .footer .iconfont,
     .part4 .iconfont {
       font-family:"iconfont" !important;
@@ -348,21 +294,17 @@
       -moz-osx-font-smoothing: grayscale;
       color:black;
     }
-
     .footer .communi {
       text-align: center;
       top: 0;
     }
-
     .footer .communi span:hover,
     .part4 .communi span:hover {
       color: yellow;
     }
-
     .footer .state {
       text-align: right;
     }
-
     .footer .state a:hover {
       text-decoration: underline;
     }
@@ -473,7 +415,7 @@
           <h3>反恐精英：全球攻势</h3>
           <p>《反恐精英：全球攻势》（简称CS:GO）是一款由VALVE与Hidden Path Entertainment合作开发的第一人称射击游戏，于2012年8月21日在欧美地区正式发售，为《反恐精英》系列游戏的第四款作品（不包括Neo和Online等衍生作品）。</p>
         </div>
-        <img src="http://cdn-qn0.jianshu.io/assets/default_avatar/9-cceda3cf5072bcdd77e8ca4f21c40998.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240" alt="">
+        <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQC_AIrupUzhjSYh-4o5xpjy_hL0iEhOyEi7HUBjanvBSAUjRPAHQ" alt="">
       </div>
       <div class="cnt">
         <div class="intro">
@@ -481,7 +423,7 @@
           <h3>反恐精英：起源</h3>
           <p>2004年10月7日，一开始使用起源2004引擎。具有新的物理系统、渲染系统和全新的地图。《反恐精英：起源2010》是用新起源引擎制作的重制版，比2004版拥有更多的功能。2010年5月8日发布，目前最新版本是V75版本。</p>
         </div>
-        <img src="http://cdn-qn0.jianshu.io/assets/default_avatar/9-cceda3cf5072bcdd77e8ca4f21c40998.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240" alt="">
+        <img src="https://production-gameflipusercontent.fingershock.com/us-east-1:3af82c5b-6d2a-43f1-8201-22388b55d8b3/707147e0-8e63-45a2-b72c-501ab2bb3196/e3dcd266-4e0b-47b1-b344-2b6f91225eef" alt="">
       </div>
       <div class="cnt">
         <div class="intro">
@@ -489,7 +431,7 @@
           <h3>反恐精英CS1.6</h3>
           <p>《反恐精英cs1.6》（Counter-Strike，简称CS）是由Valve Software公司研发的一款第一人称射击类游戏。于2003年9月9日正式发行，属于《半条命》（Half-Life）的其中一个游戏模组（MOD）衍生而成的游戏，并且可以使用steam联机。</p>
         </div>
-        <img src="http://cdn-qn0.jianshu.io/assets/default_avatar/9-cceda3cf5072bcdd77e8ca4f21c40998.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240" alt="">
+        <img src="http://www.9553.com/danji/upload/2013062559008189.jpg" alt="">
       </div>
       <div class="cnt">
         <div class="intro">
@@ -497,7 +439,7 @@
           <h3>半条命：反恐精英</h3>
           <p>《半条命：反恐精英》Beta 1.0-Beta7.1，于1999年6月19日开始更新，2000年9月13日结束更新。主要完善了《反恐精英》的本体，平衡性等也是在这个时期建立。《半条命：反恐精英》V1.0-V1.5，于2000年11月8日开始更新，2002年6月12日停止更新。完善了游戏的细部，在1.5版本时游戏已经具备很强的可玩性。但这个时候《反恐精英》仍为游戏模组而非独立游戏。</p>
         </div>
-        <img src="http://cdn-qn0.jianshu.io/assets/default_avatar/9-cceda3cf5072bcdd77e8ca4f21c40998.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240" alt="">
+        <img src="http://www.ahgame.com/uploads/allimg/160209/09312235V-2.jpg" alt="">
       </div>
       <div class="last">
         <h3>END! GOOD GAME!</h3>
