--- a/homework/task14/我的简历.html
+++ b/homework/task14/我的简历.html
@@ -94,6 +94,7 @@
       border: 1px solid #888;
       top: 10px;
       left: -4px;
+      z-index: -1;
     }
 
     .edu ul {
@@ -108,6 +109,7 @@
       border: 1px solid #888;
       top: 10px;
       left: -4px;
+      z-index: -1;
     }
 
     .point div {
