--- a/homework/jstask14/tab/tab切换1.html
+++ b/homework/jstask14/tab/tab切换1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>tab切换</title>
+  <title>tab切换1</title>
   <style>
     ul,li {
       margin: 0;
@@ -50,7 +50,7 @@
     }
 
   </style>
-  <script src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
+  <script src="https://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
 </head>
 <body>
   <div class="mod-tab">
