--- a/homework/jstask14/tab/tab切换2.html
+++ b/homework/jstask14/tab/tab切换2.html
@@ -66,7 +66,7 @@
     }
   </style>
 
-  <script src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
+  <script src="https://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
 </head>
 <body>
   <div class="mod-tab">
