--- a/homework/jstask14/题目10.html
+++ b/homework/jstask14/题目10.html
@@ -69,7 +69,7 @@
       background: #eee;
     }
   </style>
-  <script src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
+  <script src="https://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
 </head>
 <body>
   <div class="wrap">
