--- a/homework/jstask17/渐变轮播.html
+++ b/homework/jstask17/渐变轮播.html
@@ -98,8 +98,8 @@
       opacity: 1;
     }
   </style>
-  <!-- <script src="https://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script> -->
-  <script src="file:///C:/jquery-1.9.1.js"></script>
+  <script src="https://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script> 
+  <!-- <script src="file:///C:/jquery-1.9.1.js"></script> -->
 </head>
 <body>
   <div class="view">
