--- a/homework/htask1/木桶布局.html
+++ b/homework/htask1/木桶布局.html
@@ -35,7 +35,8 @@
       text-align: center;
     }
   </style>
-  <script src="file:///C:/jquery-1.9.1.js"></script>
+  <!-- <script src="file:///C:/jquery-1.9.1.js"></script> -->
+  <script src="https://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
 </head>
 <body>
   <div class="wrap"></div>
