--- a/homework/htask4 模块化/demo/HTML/DEMO.html
+++ b/homework/htask4 模块化/demo/HTML/DEMO.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>demo</title>
   <link rel="stylesheet" href="../CSS/part1.css">
-  <link rel="stylesheet" href="../css/part2.css">
-  <script data-main="../js/main" src="../js/require.js"></script>
+  <link rel="stylesheet" href="../CSS/part2.css">
+  <script data-main="../JS/main" src="../JS/require.js"></script>
 </head>
 <body>
   <div class="part1">
